# Zev.Digital

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: PACKAGING.md
graphforge-hybrid/: README.md  contxt-sidecar.spec  desktop.py  graphforge.spec  installer.iss  pyproject.toml  sidecar.py  test_imports.py  test_speech_pyav.webm
graphforge-hybrid/app/: bitemporal.py  config.py  db.py  export.py  graphiti_factory.py  graphview.py  ingest.py  jobs.py  json_object_client.py  llm_factory.py  local_embedder.py  local_ingest.py  local_nlp.py  local_reranker.py  main.py  parsers.py  sessions.py  transcribe.py  tts.py
graphforge-hybrid/app/integrations/: composio_client.py
graphforge-hybrid/app/routers/: bitemporal.py  export.py  graph.py  ingest.py  integrations.py  manual.py  search.py  sessions.py  zev.py
graphforge-hybrid/app/web/: index.html
graphforge-hybrid/app/web/assets/: index-DqgSdAIh.css  index-jlCoDra5.js
graphforge-hybrid/frontend/: index.html  package-lock.json  package.json  vite.config.js
graphforge-hybrid/frontend/src/: App.jsx  api.js  styles.css
graphforge-hybrid/frontend/src/components/: BiTemporalPanel.jsx  GraphCanvas.jsx  IngestPanel.jsx  NodeEdgePanel.jsx  SessionList.jsx  SettingsModal.jsx  SidePanel.jsx  ThemeToggle.jsx
scripts/: build-sidecar.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  capture_loop.rs  chunk.rs  commands.rs  foreground.rs  graphiti.rs  langfuse.rs  lib.rs  llm.rs  main.rs  settings.rs  vault.rs
src/components/: CaptureButton.tsx  CaptureToggle.tsx  Chat.tsx  ChatHistory.tsx  CollectionsBar.tsx  ExpertEditor.tsx  Experts.tsx  GraphView.tsx  HealthPill.tsx  Orb.tsx  ProviderSelector.tsx  Settings.tsx  Sources.tsx  ThemeToggle.tsx  Traces.tsx
src/lib/: api.ts
src/store/: useStore.ts
