[project]
name = "graphforge-hybrid"
version = "0.2.0"
description = "Zev.Digital GraphForge — offline knowledge-graph app with local NLP + manual linking + optional cloud LLMs"
requires-python = ">=3.10,<3.15"
dependencies = [
    "graphiti-core[kuzu,anthropic,google-genai]>=0.3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "faster-whisper>=1.0",
    "piper-tts>=1.3",
    "aiofiles>=23.2",
    "pywebview>=5.1",
    "pythonnet>=3.0",
    # Local NLP (no cloud API keys needed)
    "spacy>=3.7",
    "fastembed>=0.3",
    "rapidfuzz>=3.6",
    # Assistant integrations (Gmail / Calendar / Slack / Notion via managed OAuth).
    # User brings their own Composio API key; nothing is bundled.
    "composio-core>=0.5",
    "composio-openai>=0.5",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
